--- a/manifest.json
+++ b/manifest.json
@@ -4,17 +4,18 @@
     "version": "1.0.0",
     "description": "Save Time and Utilize it for self-development",
     "icons": {
-        "16": "icons/16.png",
-        "32": "icons/32.png",
-        "48": "icons/48.png",
-        "128": "icons/128.png"
+        "16": "icons/2.png",
+        "32": "icons/2.png",
+        "48": "icons/2.png",
+        "128": "icons/2.png"
     },
     "action": {
+        "default_popup": "popup.html",
         "default_icon": {
-            "16": "icons/16.png",
-            "32": "icons/32.png",
-            "48": "icons/48.png",
-            "128": "icons/128.png"
+            "16": "icons/2.png",
+            "32": "icons/2.png",
+            "48": "icons/2.png",
+            "128": "icons/2.png"
         }
     },
     "permissions": ["storage","contextMenus","alarms","notifications"],
